--- a/source/index.html
+++ b/source/index.html
@@ -198,7 +198,7 @@
         <div class="contacts__map">
           <h2 class="visually-hidden">Как до нас добраться - карта</h2>
           <div class="contacts__map-img"></div>
-          <!-- <iframe title="Google карта" aria-label="Как до нас добраться - карта." class="contacts__mapframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d706.6131938183592!2d30.322139022741986!3d59.93871421128104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1578168362763!5m2!1sru!2sru" width="320" height="364" style="border: 0;" allowfullscreen=""></iframe> -->
+          <iframe title="Google карта" aria-label="Как до нас добраться - карта." class="contacts__mapframe" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d706.6131938183592!2d30.322139022741986!3d59.93871421128104!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1578168362763!5m2!1sru!2sru" width="320" height="364" style="border: 0;" allowfullscreen=""></iframe>
           <!-- <iframe title="Яндекс карта" class="contacts__mapframe" aria-label="Как до нас добраться - карта." src="https://yandex.ru/map-widget/v1/?um=constructor%3A25ea7edc65c0b68f51194d7cf9913955edd9e957d5fbb80581f08569bc11086a&amp;source=constructor" width="320" height="364" style="border: 0;"></iframe> -->
         </div>
       </section>
