--- a/source/catalog.html
+++ b/source/catalog.html
@@ -26,7 +26,7 @@
     </div>
     <header class="page-header">
       <div class="page-header__wrapper wrapper">
-        <a class="page-header__link page-header__link--inner-page" href="index.html" aria-label="Перейти на главную">
+        <a class="page-header__link page-header__link--inner-page" href="index.html" aria-label="Перейти на главную.">
           <picture>
             <source media="(min-width: 1300px)" srcset="img/logo-desktop.svg">
             <source media="(min-width: 768px)" srcset="img/logo-tablet.svg">
@@ -34,16 +34,16 @@
           </picture>
         </a>
         <nav class="page-header__nav header-nav header-nav--inner-page">
-          <button class="header-nav__toggle" type="button" aria-label="Главное меню сайта"></button>
+          <button class="header-nav__toggle" type="button" aria-label="Главное меню сайта."></button>
           <ul class="header-nav__list">
             <li class="header-nav__item">
-              <a href="index.html" aria-label="Перейти на главную страницу">главная</a>
-            </li>
-            <li class="header-nav__item header-nav__item--active">
-              <a href="#">каталог продукции</a>
+              <a class="header-nav__link" href="index.html" aria-label="Перейти на главную страницу.">главная</a>
             </li>
             <li class="header-nav__item">
-              <a href="form.html">подбор программы</a>
+              <a class="header-nav__link header-nav__link--active" href="#">каталог продукции</a>
+            </li>
+            <li class="header-nav__item">
+              <a class="header-nav__link" href="form.html">подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -56,7 +56,7 @@
           <h2 id="pro" class="basic-products__title">Каталог продукции</h2>
           <ul class="basic-products__list">
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-small-desktop@1x.webp 1x, img/chicken-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-small-tablet@1x.webp 1x, img/chicken-small-tablet@2x.webp 2x">
@@ -68,7 +68,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy PRO 500 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -89,7 +89,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/chicken-big-desktop@1x.webp 1x, img/chicken-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/chicken-big-tablet@1x.webp 1x, img/chicken-big-tablet@2x.webp 2x">
@@ -101,7 +101,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy PRO 1000 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -122,7 +122,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-small-desktop@1x.webp 1x, img/fish-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-small-tablet@1x.webp 1x, img/fish-small-tablet@2x.webp 2x">
@@ -134,7 +134,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy PRO 500 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -155,7 +155,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/fish-big-desktop@1x.webp 1x, img/fish-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/fish-big-tablet@1x.webp 1x, img/fish-big-tablet@2x.webp 2x">
@@ -167,7 +167,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy PRO 1000 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -188,7 +188,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li id="slim" class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-small-desktop@1x.webp 1x, img/buckwheat-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-small-tablet@1x.webp 1x, img/buckwheat-small-tablet@2x.webp 2x">
@@ -200,7 +200,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy Slim 500 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -221,7 +221,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/buckwheat-big-desktop@1x.webp 1x, img/buckwheat-big-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/buckwheat-big-tablet@1x.webp 1x, img/buckwheat-big-tablet@2x.webp 2x">
@@ -233,7 +233,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy Slim 1000 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -254,7 +254,7 @@
               <a href="goods-order.html" class="basic-item__button button button--green">Заказать</a>
             </li>
             <li class="basic-products__item basic-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a class="basic-item__links" href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <picture>
                   <source type="image/webp" media="(min-width: 1300px)" srcset="img/rice-small-desktop@1x.webp 1x, img/rice-small-desktop@2x.webp 2x">
                   <source type="image/webp" media="(min-width: 768px)" srcset="img/rice-small-tablet@1x.webp 1x, img/rice-small-tablet@2x.webp 2x">
@@ -266,7 +266,7 @@
                 </picture>
               </a>
               <div class="basic-item__text-wrapper">
-                <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+                <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                   <p class="basic-item__title">Cat Energy Slim 500 г</p>
                 </a>
                 <ul class="basic-item__list description-list">
@@ -289,7 +289,7 @@
             <li class="basic-products__item products-proposal">
               <p class="products-proposal__title">Показать еще 100500 товаров</p>
               <p class="products-proposal__content">На самом деле вкусов гораздо больше!</p>
-              <a class="products-proposal__button button button--grey" aria-label="Перейти на страницу новых товаров" href="goods-new.html" target="_blank" rel="noopener">Показать все</a>
+              <a class="products-proposal__link button button--grey" aria-label="Перейти на страницу новых товаров." href="goods-new.html" target="_blank" rel="noopener">Показать все</a>
             </li>
           </ul>
         </div>
@@ -303,7 +303,7 @@
         <div class="additional-products__wrapper wrapper">
           <ul class="additional-products__list">
             <li class="additional-products__item additional-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <p class="additional-item__title">Сахарозаменитель</p>
               </a>
               <div class="additional-item__content">
@@ -313,7 +313,7 @@
               <a href="goods-order.html" class="additional-item__button button button--green">Заказать</a>
             </li>
             <li class="additional-products__item additional-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <p class="additional-item__title">Питьевая вода</p>
               </a>
               <div class="additional-item__content">
@@ -323,7 +323,7 @@
               <a href="goods-order.html" class="additional-item__button button button--green">Заказать</a>
             </li>
             <li class="additional-products__item additional-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <p class="additional-item__title">Молоко</p>
               </a>
               <div class="additional-item__content">
@@ -333,7 +333,7 @@
               <a href="goods-order.html" class="additional-item__button button button--green">Заказать</a>
             </li>
             <li class="additional-products__item additional-item">
-              <a href="goods-description.html" aria-label="Перейти на страницу описания товара" target="_blank" rel="noopener">
+              <a href="goods-description.html" aria-label="Перейти на страницу описания товара." target="_blank" rel="noopener">
                 <p class="additional-item__title">Витамины</p>
               </a>
               <div class="additional-item__content">
@@ -376,21 +376,21 @@
           </a>
           <ul class="social footer-links__item">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Вконтакте">
+              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Вконтакте.">
                 <svg class="social__icon" width="22" height="12" role="img">
                   <use xlink:href="#icon-vk"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Instagram">
+              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Instagram.">
                 <svg class="social__icon" width="16" height="16" role="img">
                   <use xlink:href="#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Facebook">
+              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Facebook.">
                 <svg class="social__icon" width="10" height="19" role="img">
                   <use xlink:href="#icon-fb"></use>
                 </svg>
@@ -398,10 +398,10 @@
             </li>
           </ul>
           <address class="copyright footer-links__item">
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Посетите сайт разработчика">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Посетите сайт разработчика.">
               <span class="copyright__title">HTML Academy</span>
             </a>
-            <a class="copyright__logo-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Сайт HTML Academy">
+            <a class="copyright__logo-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Сайт HTML Academy.">
               <svg class="copyright__icon" width="27" height="34" role="img">
                 <use xlink:href="#htmlacademy"></use>
               </svg>
