--- a/source/index.html
+++ b/source/index.html
@@ -35,16 +35,16 @@
         </a>
         <!-- Классы для переключения состояния меню и внешнего вида кнопок:  header-nav--opened и header-nav--closed при загрузке script.js происходит подключение класса header-nav--closed и меню переходит в закрытое состояние, иначе меню остается открытым и кнопка открытия меню не отображается -->
         <nav class="page-header__nav header-nav">
-          <button class="header-nav__toggle" type="button" aria-label="Главное меню сайта"></button>
+          <button class="header-nav__toggle" type="button" aria-label="Главное меню сайта."></button>
           <ul class="header-nav__list">
-            <li class="header-nav__item header-nav__item--active">
-              <a href="#">главная</a>
+            <li class="header-nav__item">
+              <a class="header-nav__link header-nav__link--active" href="#">главная</a>
             </li>
             <li class="header-nav__item">
-              <a href="catalog.html">каталог продукции</a>
+              <a class="header-nav__link" href="catalog.html">каталог продукции</a>
             </li>
             <li class="header-nav__item">
-              <a href="form.html">подбор программы</a>
+              <a class="header-nav__link" href="form.html">подбор программы</a>
             </li>
           </ul>
         </nav>
@@ -57,7 +57,7 @@
             <p class="health-program__slogan">
               Занялся собой? Займись котом!
             </p>
-            <a class="health-program__link button button--green" href="form.html" aria-label="Подобрать программу оздоровления">Подобрать программу</a>
+            <a class="health-program__link button button--green" href="form.html" aria-label="Подобрать программу оздоровления.">Подобрать программу</a>
           </div>
           <picture>
             <source type="image/webp" media="(min-width: 1300px)" srcset="img/index-can-desktop@1x.webp 1x, img/index-can-desktop@2x.webp 2x">
@@ -83,14 +83,14 @@
               <p class="program-item__description">
                 Ваш кот весит больше собаки и почти утратил способность лазить по деревьям? Пора на диету! Cat Energy Slim поможет вашему питомцу сбросить лишний вес.
               </p>
-              <a class="program-item__link" href="catalog.html#slim" aria-label="Перейти в каталог - раздел Slim">Каталог Slim</a>
+              <a class="program-item__link" href="catalog.html#slim" aria-label="Перейти в каталог - раздел Slim.">Каталог Slim</a>
             </li>
             <li class="program-list__item program-item">
               <h3 class="program-item__title program-item__icon program-item__icon--pro">Набор массы</h3>
               <p class="program-item__description program-item__description--narrow">
                 Заработать авторитет среди дворовых&nbsp;котов и&nbsp;даже собак? Серия Cat Energy Pro поможет вашему коту нарастить необходимые мышцы!
               </p>
-              <a class="program-item__link" href="catalog.html#pro" aria-label="Перейти в каталог - раздел Pro">Каталог pro</a>
+              <a class="program-item__link" href="catalog.html#pro" aria-label="Перейти в каталог - раздел Pro.">Каталог pro</a>
             </li>
           </ul>
         </div>
@@ -174,11 +174,11 @@
               </picture>
             </div>
             <div class="slider__toggles">
-              <button class="slider__toggle slider__toggle--before" type="button" aria-label="Таким кот был">Было</button>
+              <button class="slider__toggle slider__toggle--before" type="button" aria-label="Таким кот был.">Было</button>
               <div class="slider__indicator">
-                <span class="slider__control-handle"></span>
+                <button class="slider__control-handle" aria-label="Нажмите, чтобы увидеть как изменился кот."></button>
               </div>
-              <button class="slider__toggle slider__toggle--after" type="button" aria-label="Таким кот стал">Стало</button>
+              <button class="slider__toggle slider__toggle--after" type="button" aria-label="Таким кот стал.">Стало</button>
             </div>
           </div>
         </div>
@@ -210,21 +210,21 @@
           </a>
           <ul class="social footer-links__item">
             <li class="social__item">
-              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Вконтакте">
+              <a class="social__link social__link--vk" href="https://vk.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Вконтакте.">
                 <svg class="social__icon" width="22" height="12" role="img">
                   <use xlink:href="#icon-vk"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Instagram">
+              <a class="social__link social__link--insta" href="https://instagram.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Instagram.">
                 <svg class="social__icon" width="16" height="16" role="img">
                   <use xlink:href="#icon-insta"></use>
                 </svg>
               </a>
             </li>
             <li class="social__item">
-              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Facebook">
+              <a class="social__link social__link--fb" href="https://facebook.com/htmlacademy" target="_blank" rel="noopener" aria-label="Страница разработчика Facebook.">
                 <svg class="social__icon" width="10" height="19" role="img">
                   <use xlink:href="#icon-fb"></use>
                 </svg>
@@ -232,10 +232,10 @@
             </li>
           </ul>
           <address class="copyright footer-links__item">
-            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Посетите сайт разработчика">
+            <a class="copyright__link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Посетите сайт разработчика.">
               <span class="copyright__title">HTML Academy</span>
             </a>
-            <a class="copyright__logo-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Сайт HTML Academy">
+            <a class="copyright__logo-link" href="https://htmlacademy.ru/intensive/adaptive" target="_blank" rel="noopener" aria-label="Сайт HTML Academy.">
               <svg class="copyright__icon" width="27" height="34" role="img">
                 <use xlink:href="#htmlacademy"></use>
               </svg>
